--- a/website/templates/sell.html
+++ b/website/templates/sell.html
@@ -24,7 +24,7 @@
         <input type="file" name="file" accept=".webm, .mp4, .avi, .mov, .mkv" style="width: 100%; margin-bottom: 10px; padding: 8px; box-sizing: border-box; border: 1px solid #ccc;">
 
         <label for="location" style="display: block; margin-bottom: 5px; color: #555;">Location:</label>
-        <select id="search-location" name="search-location" style="width: 100%; margin-bottom: 10px; padding: 10px; box-sizing: border-box;">
+        <select id="search-location" name="location" style="width: 100%; margin-bottom: 10px; padding: 10px; box-sizing: border-box;">
             <!-- Options for location here -->
         </select>
 
