--- a/website/templates/account.html
+++ b/website/templates/account.html
@@ -1,10 +1,18 @@
 {% extends 'base.html' %}
 
 {% block account_button %}
-    <li style="float: left;"><a href="{{ url_for('account') }}" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;">Account</a></li>
+   
 {% endblock %}
 
 {% block content %}
-    <!-- Your account-specific content goes here -->
-    <!-- For example, you can include login and sign-up forms/buttons -->
+<br/>
+    <div>
+    <button style="background-color: brown; overflow: hidden; padding: 15px; border-radius: 5px; padding-left: 20px; padding-right: 20px; padding-bottom: 5px; padding-top: 5px;"><a href="{{ url_for('upload_file') }}" style="display: block; color:white; text-align: center;text-decoration: none;">Sell</a></button>
+
+
+    <button style="background-color: brown; overflow: hidden;
+    padding: 15px; border-radius: 5px; padding-left: 20px; padding-right: 20px; padding-bottom: 5px; padding-top: 5px;"><a href="{{ url_for('display_properties') }}" style="display: block;color: white; text-align: center;text-decoration: none;">Buy</a></button>
+     </button>
+     <div/>
+    
 {% endblock %}
